<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dotsItem"
        android:icon="@drawable/ic_sharp_more_vert_24"
        android:title="@string/dots_string"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/scoreItem"
                android:title="@string/score_string"
                app:showAsAction="never" />
            <item
                android:id="@+id/infoItem"
                android:title="@string/info_string"
                app:showAsAction="never" />
            <item
                android:id="@+id/signOutItem"
                android:title="@string/sing_out"
                app:showAsAction="never" />
        </menu>
    </item>


</menu>