<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="190dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/GreetingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/greeting_string"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/satietyBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/satiety"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="255dp"
        android:layout_height="347dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/catImg"
            android:layout_width="255dp"
            android:layout_height="251dp"
            android:src="@drawable/cat" />


        <Button
            android:id="@+id/feedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_brown"
            android:text="@string/feed_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="74dp"
            android:text="@string/share_result" />

    </LinearLayout>

</RelativeLayout>